nailgun/static/styles/main.less
/* ... */
.navbar-icons {
  @navbar-icon-size: 44px;
  @navbar-icon-spacing: 10px;
  @navbar-icon-font: 'bebas bold';
  margin-top: 13px;
  margin-right: 0;
  height: @navbar-icon-size;
  position: relative;
  > li {
    color: @navbar-icon-color;
    display: block;
    float: left;
    margin: 0;
    padding: 0;
    width: @navbar-icon-size;
    height: @navbar-icon-size;
    margin-left: @navbar-icon-spacing;
    -webkit-font-smoothing: antialiased;
    cursor: pointer;
    user-select: none;
    box-sizing: border-box;
    .badge {
      position: absolute;
      top: 0;
      right: 0;
      background-color: @red;
      border-radius: 4px;
      font-family: @navbar-icon-font;
      font-weight: 100;
      padding: 3px 3px 3px 4px;
      box-shadow: 0 1px 1px @shadow-color;
      font-size: @base-font-size;
      letter-spacing: 1px;
      box-sizing: border-box;
      opacity: 0;
      &.visible {
        opacity: 1;
        transition: opacity .8s ease-in;
      }
    }
    .navbar-icon-sprite-index(@index) {
      @icon-sprite-img: "../img/icons/header-icons-sprite.svg";
      background: url(@icon-sprite-img) no-repeat 0 -@navbar-icon-size * @index;
      &:hover {
        background: url(@icon-sprite-img) no-repeat -@navbar-icon-size -@navbar-icon-size * @index;
      }
    }

    &.language-icon {
      .navbar-icon-sprite-index(0);
      .language-text {
        display: block;
        text-align: center;
        margin-left: 0;
        margin-top: 7px;
        font-family: @navbar-icon-font;
        font-size: @base-font-size + 8;
      }
    }

    &.statistics-icon {
      .navbar-icon-sprite-index(1);
      .unallocated {
        display: block;
        text-align: center;
        font-size: @base-font-size - 4;
        .font-bold;
        margin: 8px 0 0 0;
      }
      .total {
        display: block;
        text-align: center;
        font-size: @base-font-size - 4;
        .font-bold;
        margin: 1px 0 0 0;
      }
      &.no-unallocated {
        .navbar-icon-sprite-index(0);
        .total {
          display: block;
          text-align: center;
          margin-left: 0;
          margin-top: 7px;
          .font-light;
          font-family: @navbar-icon-font;
          font-size: @base-font-size + 8;
        }
      }
    }

    &.user-icon {
      .navbar-icon-sprite-index(2);
    }

    &.notifications-icon {
      .navbar-icon-sprite-index(3);
    }
  }

  .popover {
    @default-z-index: 1060;
    display: block;
    position: absolute;
    left: 0;
    top: @navbar-icon-size;
    max-width: none;
    z-index: @default-z-index;
    font-family: @open-sans-font;
    .font-normal;
    font-size: @base-font-size - 1px;
    line-height: 1.2;
    background-color: @white;
    background-clip: padding-box;
    border: 1px solid rgba(0,0,0,0.2);
    border-radius: 6px;
    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
    padding: 1px;
    text-align: left;
    white-space: normal;
    color: @base-text-color;
    > .arrow {
      left: auto;
    }
    > .popover-content {
      padding: 12px;
    }

    &.notifications-popover {
      z-index: @default-z-index - 20;
      .notification {
        border-bottom: 1px solid @gray + 80%;
        padding-bottom: 14px;
        margin-bottom: 10px;
        box-sizing: border-box;
        .glyphicon {
          display: block;
          font-size: @base-font-size + 2px;
          float: left;
          width: 10%;
          margin-top: 2px;
        }
        p {
          display: block;
          width: 90%;
          float: left;
          margin: 0;
          .break-word;
        }
        &.clickable {
          p {
            color: @link-color;
            cursor: pointer;
            &:hover {
              text-decoration: underline;
              color: @link-color-hover;
            }
          }
        }
        &.unread {
          .font-semibold;
        }
        &:after {
          .clearfix;
        }
        &:last-child {
          border-bottom: 0;
          padding-bottom: 0;
          margin-bottom: 0;
        }
      }
      .show-more {
        text-align: center;
        .font-semibold;
        font-size: @base-font-size;
      }
    }

    &.user-popover {
      .username {
        color: @gray;
      }
      .name {
        margin: 4px 0px 10px 0px;
        padding: 0px;
      }
      .user-actions {
        .clearfix;
      }
      button {
        .glyphicon {
          margin-right: 3px;
        }
      }
    }

    &.statistics-popover {
      .list-group {
        margin: 0;
      }
    }

    &.language-popover {
      a {
        cursor: pointer;
      }
    }
  }

  @default-popover-width: 260px;
  @default-arrow-offset: 10px;
  .popover-layout(@index, @width: @default-popover-width) {
    width: @width;
    @navbar-icon-width: @navbar-icon-size + @navbar-icon-spacing;
    @popover-right-align-offset: @navbar-icon-width * @navbar-icon-count - @width;
    @popover-center-align-offset: @popover-right-align-offset - @navbar-icon-width * @index  + @width / 2 - @navbar-icon-size / 2;
    @popover-offset: min(@popover-right-align-offset, @popover-center-align-offset);
    left: @popover-offset;
    > .arrow {
      right: @default-arrow-offset + @navbar-icon-width * @index + (@popover-offset - @popover-right-align-offset);
    }
  }

  &.with-auth {
    @navbar-icon-count: 4;
    .notifications-popover {.popover-layout(@index: 0)}
    .user-popover {.popover-layout(@index: 1)}
    .statistics-popover {.popover-layout(@index: 2, @width: 230px)}
    .language-popover {.popover-layout(@index: 3, @width: 110px)}
  }

  &.without-auth {
    @navbar-icon-count: 3;
    .notifications-popover {.popover-layout(@index: 0)}
    .statistics-popover {.popover-layout(@index: 1, @width: 230px)}
    .language-popover {.popover-layout(@index: 2, @width: 110px)}
  }
}
/* ... */

